--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,45 @@
-.PHONY: placet placet-htgen utils
+PYTHON_BIN = 
+PYTHON_CONFIG = 
+NUMPY_INCLUDES =  -I`$(PYTHON_BIN) -c "import numpy ; print(numpy.get_include())"`
+PYTHON_CFLAGS = $(filter-out -Wstrict-prototypes,  $(shell $(PYTHON_CONFIG) --cflags)) $(NUMPY_INCLUDES)
+PYTHON_LDFLAGS = $(shell $(PYTHON_CONFIG) --ldflags)
+MKOCTFILE = mkoctfile
 
-placet:
-	+make -f Makefile.default
+TMPFILE := $(shell mktemp)
 
-placet-htgen:
-	+make -f Makefile.htgen
+OBJS = TOP.o
 
-utils:
-	+make -f Makefile.utils
+LDFLAGS = -L/opt/X11/lib -ltcl -ltk
+CXXFLAGS = -I/opt/X11/include
 
-cleanobj:
-	@rm -rf placet.obj
-	@rm -rf placet-htgen.obj
-	@rm -f octave.df
+all: TOP
 
-cleanexe:
-	@rm -f placet
-	@rm -f placet-htgen
-	@rm -f ground
-	@rm -f grid
-	@rm -f mad2gp
+install: all
+	@echo "Done!"
 
-clean: cleanobj cleanexe
+TOP: TOP.cc 
+	@$(CXX) TOP.cc -o TOP $(CXXFLAGS) $(LDFLAGS)
+
+src*/%.o : src*/%.cc include*/%.hh
+	@echo "Compiling $< ..."
+	@$(CXX) $(CXXFLAGS) $(GSL_CFLAGS) $< -c -o $@
+
+src*/%.o : src*/%.cc
+	@echo "Compiling $< ..."
+	@$(CXX) $(CXXFLAGS) $(GSL_CFLAGS) $< -c -o $@
+
+src-physics/space_charge.o: include-physics/space_charge*.hh
+src-physics/space_charge_pic.o: include-physics/space_charge*.hh include-math/greens_functions/*.hh
+
+# CLEAN
+
+clean:
+	@rm -f TOP $(OBJS)\
+ RF_Track_python_wrap.o\
+ RF_Track_octave_wrap.o\
+ RF_Track.oct\
+ RF_Track.py\
+ _RF_Track.so
+
+cleanall: clean
+	@rm -f RF_Track_octave_wrap.cc RF_Track_python_wrap.cc
